fix z-index issue for archives close hyperlink using opacity. Better fix for  #2243

--- a/src/css/base.styl
+++ b/src/css/base.styl
@@ -1553,6 +1553,7 @@ nav ul
           margin-right: 16px
 
     .runner-board.opponent
+      opacity: 0.99
       > div:first-child
         margin-top: 0
 
@@ -1698,6 +1699,7 @@ nav ul
         transform(rotate(-90deg))
 
       .ices
+        opacity: 0.99
         .subtype-target
           transform(rotate(-90deg), translateY(-100%))
 
